# slay-the-spire-2-emulator

./: .editorconfig  .gitignore  AGENTS.md  PLAN.md  README.md  assemble_run_env.py  assemble_run_env_v2.py  assemble_run_env_v3.py  check_colorless.py  check_missing.py  clean_run_env.py  debug_actions.py  debug_states.py  extract_class.py  fix_rarities.py  gen_colorless_pool.py  gen_pool2.py  gen_pool3.py  gen_pool4.py  gen_pool5.py  gen_pool_mapping.py  gen_potion_pool.py  gen_rarity_map.py  gen_relic_pool.py  gen_shop_pools.py  lint-and-test.sh  lint.sh  list_uncommon.py  new_pool.txt  new_pools.txt  new_rarity_map.txt  out.json  out_emulator.json  out_emulator_v2.json  out_emulator_v3.json  out_emulator_v4.json  package.json  plan.md  pyproject.toml  requirements.txt  (+6 more)
.github/workflows/: csharp.yml  ty.yml
decompiled/: --y__InlineArray2.cs  --y__InlineArray3.cs  --y__InlineArray4.cs  --y__InlineArray5.cs  --z__ReadOnlyArray.cs  --z__ReadOnlyList.cs  --z__ReadOnlySingleElementList.cs  .version  sts2.csproj
decompiled/GodotPlugins.Game/: Main.cs
decompiled/MegaCrit.Sts2.Core.Achievements/: Achievement.cs  AchievementMetric.cs  AchievementsHelper.cs
decompiled/MegaCrit.Sts2.Core.Animation/: AnimState.cs  CreatureAnimator.cs
decompiled/MegaCrit.Sts2.Core.Assets/: AssetCache.cs  (+11 more)
scripts/: build.sh  compare_traces.py  decompile.sh  diff_patch.py  evaluate.py  extract_data.py  patch_update.sh  replay_full_run_trace.py  start_real_game_run.py  trace.py  trace_real_game.py  trace_real_game_run.py  train.py  validate_real_game_sweep.py  validate_real_game_trace.py
(+3462 files in other folders)
