[project]
name = "slay-the-spire-2-emulator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gymnasium==1.2.3",
    "numpy==2.4.6",
    "sb3-contrib==2.8.0",
    "stable-baselines3==2.8.0",
    "torch==2.12.0",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "ty",
]

[tool.uv]
package = false
